# flottants

./: Cargo.toml  README.md
données/: float_data.csv  float_data1.csv  float_data2.csv  float_data3.csv
figures/: comparaisonmemoirepng
résultats/: conso_energie.txt  conso_memoire.txt  precision.txt  temps.txt
scripts/: generate_data.rs  precision.py  precisionparop.py
scripts/consommation/: comparaisonenergie.py  comparaisonmemoire.py  comparaisonpuissance.py  consoenergie.py  consomemoire.py  mesure_energie.sh
scripts/temps/: comparaisontemps.py  mesure_temps.sh  tempsparfe.py  tempsparop.py
src/: main.rs
src/consommation/: operation.rs
src/precision_temps/: deux_flottants_precision.rs  deux_flottants_temps.rs  operation_temps.rs  un_flottant.rs  un_flottant_test.rs
