[package]
name = "flottants"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"
rand = "0.9.0"
procfs = "0.17.0"

[[bin]]
name = "deux_flottants"
path = "src/precision_temps/deux_flottants.rs"

[[bin]]
name = "deux_flottants_precision"
path = "src/precision_temps/deux_flottants_precision.rs"

[[bin]]
name = "deux_flottants_temps"
path = "src/precision_temps/deux_flottants_temps.rs"

[[bin]]
name = "operation"
path = "src/consommation/operation.rs"

[[bin]]
name = "operation_temps"
path = "src/precision_temps/operation_temps.rs"

[[bin]]
name = "generate_data"
path = "scripts/generate_data.rs"